# unified

./: .gitignore  .justfile  Cargo.toml  README.md  plan.md  unified.toml
crates/un-cache/: Cargo.toml
crates/un-cache/src/: lib.rs
crates/un-cli/: Cargo.toml  build.rs
crates/un-cli/src/: lib.rs  main.rs
crates/un-cli/tests/: clean-test-env.ps1  clean-test-env.sh  integration.rs  setup-test-env.ps1  setup-test-env.sh
crates/un-core/: Cargo.toml
crates/un-core/src/: lib.rs
crates/un-download/: Cargo.toml
crates/un-download/src/: extract.rs  lib.rs  platform.rs
crates/un-download/src/provider/: artifactory.rs  gitea.rs  github.rs  gitlab.rs  http.rs  mod.rs
crates/un-git/: Cargo.toml
crates/un-git/src/: lib.rs
doc/: architecture.md
tests/: integration.rs
