[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Christian Jann <christian.jann@ymail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/christianjann/unified"
homepage = "https://github.com/christianjann/unified"
description = "Unified Repo & Artifact Manager"

[workspace.dependencies]
# Shared dependencies go here
serde = { version = "1.0", features = ["derive"] }
toml = "1.0.6"
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
glob = "0.3"
tempfile = "3.0"
indicatif = "0.18"
sha2 = "0.10"
tui-banner = "0.2.3"
home = "0.5"
dirs = "6.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = { version = "1.0", features = ["serde"] }
zip = "2.0"
flate2 = "1.0"
tar = "0.4"
urlencoding = "2.1"



