[package]
name = "un-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]

[[bin]]
name = "un"
path = "src/main.rs"

[dependencies]
un-core = { path = "../un-core" }
un-cache = { path = "../un-cache" }
un-git = { path = "../un-git" }
clap.workspace = true
toml.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indicatif.workspace = true
sha2.workspace = true
tui-banner.workspace = true
