[package]
name = "un-download"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
un-cache = { path = "../un-cache" }
un-core = { path = "../un-core" }
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
indicatif.workspace = true
tempfile.workspace = true
