[package]
name = "un-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
un-cache = { path = "../un-cache" }
un-core = { path = "../un-core" }
thiserror.workspace = true
anyhow.workspace = true
glob.workspace = true
tempfile.workspace = true
indicatif.workspace = true
